--- a/demo10.html
+++ b/demo10.html
@@ -42,16 +42,17 @@
 		}
 
 		function textCreate(usertext){
-           	var fontSize = Math.random() * (80 - 30 + 1) + 30 | 0;
-           	var str = fontSize+"px"+" 微軟正黑體";
-           	var color = "#" + (~~(Math.random() * 0xffffff)).toString(16); 
-            var text = new createjs.Text(usertext,str,color);
-            stage.addChild(text);
-            text.x = 50;
-            text.y = Math.random() * (window.innerHeight - 0 + 1) + 0 | 0;
-            createjs.Tween.get(text).to({x: window.innerWidth}, 3000 , createjs.QuadraticIn).call(function(){
-                stage.removeChild(text);
-            });
+			var fontSize = Math.random() * (80 - 30 + 1) + 30 | 0;
+			var speed = Math.random() * (6000 - 2000 + 1) + 2000 | 0; 
+			var str = fontSize+"px"+" 微軟正黑體";
+			var color = "#" + (~~(Math.random() * 0xffffff)).toString(16); 
+			var text = new createjs.Text(usertext,str,color);
+			stage.addChild(text);
+			text.x = 50;
+			text.y = Math.random() * (window.innerHeight - 0 + 1) + 0 | 0;
+			createjs.Tween.get(text).to({x: window.innerWidth}, speed , createjs.QuadraticIn).call(function(){
+				stage.removeChild(text);
+			});
 		}
 
 
